# MasseyRamanujan

./: .gitignore  README.md  pyproject.toml
docs/: api-docs.rst  conf.py  index.rst
docs/api/: modules.rst  ramanujan.enumerators.rst  ramanujan.poly_domains.rst  ramanujan.rst  ramanujan.utils.rst
ramanujan/: CachedSeries.py  LHSHashTable.py
