[tool.poetry]
name = "ramanujan"
version = "0.1.0"
description = "Using algorithms to discover new mathematics"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cycler = "^0.10.0"
kiwisolver = "^1.1.0"
matplotlib = "^3.2.0"
mpmath = "^1.1.0"
ordered-set = "^3.1.1"
pandas = "^1.0.1"
protobuf = "^3.11.3"
PyLaTeX = "^1.3.1"
pyparsing = "^2.4.6"
python-dateutil = "^2.8.1"
pytz = "^2019.3"
six = "^1.14.0"
sympy = "^1.5.1"
llvmlite = "^0.39.1"
numpy = "^1.23.5"
numba = "^0.56.4"
ortools = "^9.4.1874"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
